@@ -56,7 +56,6 @@ namespace C
         {
             var linkerOptions = module.Options as ILinkerOptions;
             linkerOptions.OutputType = ELinkerOutput.DynamicLibrary;
-            linkerOptions.DynamicLibrary = true;
 
             if (module.Options is ILinkerOptionsOSX)
             {
